[project]
name = "ct4"
version = "0.0.2"
authors = [
  { name="RMayorgaV", email="rmayorgav@rmayorgav.com" },
]
description = "Create Template Command Line"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rmayorgav/ct4"
Issues = "https://github.com/rmayorgav/ct4/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"